Blogger gold about section changes + earning calculator changes

--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -1442,13 +1442,21 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="earning_calculator">Earning Calculator</string>
   <string name="click_here_btn">Click to view leaderboard</string>
   <string name="checkout_growth_hack">Checkout the growth hacks</string>
-  <string name="blogger_gold_about_text">মমস্প্রেসোর দশ বছর পূর্তির মহোৎসবকে আমরা আরো বিশেষভাবে আপনাদের সাথে উদযাপন করতে চাই, যাতে থাকবে প্রাপ্তির আনন্দ !! আনন্দ সংবাদ,তাই না !! আমাদের জন্মদিনের এই পুরো মাসব্যাপী রয়েছে আপনাদের জন্য ৫লক্ষ টাকা অবধি জেতার সুযোগ!! আপনারা সকলেই যোগ দিয়ে জয়ী হতে পারেন আর তার জন্য যে জিনিসটি আপনাদের করতে হবে তা হলো, ক্রিয়েট করুন,শেয়ার করুন আর উপার্জন করুন অর্থাৎ (Create. Share. Earn).        </string>
+  <string name="blogger_gold_about_text">উৎসবের রেশ এখনও বাকি আছে আর সেই আনন্দের অংশীদার হতে আপনাকেও জানাই আমন্ত্রণ !!</string>
   <string name="webview_know_more">অধিক জানার জন্য</string>
   <string name="leaderboard_faq">সাধারণ প্রশ্ন ও উত্তরাবলী </string>
   <string name="click_below_btn">লিডারবোর্ড দেখার জন্য নিচে ক্লিক করুন</string>
   <string name="rank_up">শুভেচ্ছা!! আপনি গতকালের থেকে %1$d পজিশন উপরে উঠেছেন </string>
   <string name="rank_down">আপনি গতকালের থেকে %1$d পজিশন নিচে নেমে গেছেন!! ক্রিয়েট আর শেয়ার করুন যাতে আপনার পজিশন উপরে ওঠে।</string>
   <string name="rank_same"> ক্রিয়েট আর শেয়ার করুন যাতে আপনার পজিশন আরো ভালো হয়।</string>
+  <string name="blogger_gold_about_text1">মমস্প্রেসোর দশ বছর পূর্তির মহোৎসবকে আমরা আরো বিশেষভাবে আপনাদের সাথে উদযাপন করতে চাই, যাতে থাকবে প্রাপ্তির আনন্দ !! আনন্দ সংবাদ,তাই না !! আমাদের জন্মদিনের এই পুরো মাসব্যাপী রয়েছে আপনাদের জন্য ৫লক্ষ টাকা অবধি জেতার সুযোগ, আসছে 10th বার্থডে বোনানজা !! </string>
+  <string name="blogger_gold_about_text2">আপনাকে কি করতে হবে?</string>
+  <string name="blogger_gold_about_text3">ক্রিয়েট করুন আপনার ভিলগস বা লিখুন ব্লগস,যদি এখনও অবধি না করে থাকেন।</string>
+  <string name="blogger_gold_about_text4">শেয়ার করুন আপনার ব্লগস আর ভিলগস ১০ই অক্টোবর থেকে ২০শে নভেম্বর পর্যন্ত,আপনার আত্মীয়,বন্ধু বা সোশ্যাল গ্রুপে যাতে আপনি পেতে পারেন বেশি ORGANIC PAGE VIEWS. বেশি organic views পাওয়ার জন্য আপনি ১০ই অক্টোবরের আগের আপনার পুরোনো পাবলিশড ব্লগস আর ভিলগস ও পুনরায় reshare করতে পারেন।</string>
+  <string name="blogger_gold_about_text5">মমস্প্রেসোর সর্বমোট organic page views এ আপনার যোগদানের উপর নির্ভর করে উপার্জন করুন ৫লক্ষ টাকার মধ্যে আপনার ভাগ।</string>
+  <string name="blogger_gold_about_text6">অভিনব তাই না!! তাহলে আর দেরি কিসের? মনে রাখবেন আপনার ব্লগ বা ভিলগের organic page views যত বেশি হবে ৫লক্ষ টাকার মধ্যে তত বেশি অঙ্ক আপনার জেতার সম্ভাবনা বাড়বে।</string>
+  <string name="blogger_gold_about_text7">বিশদে জানার জন্য ক্লিক করুন এখানে </string>
+  <string name="blogger_gold_about_text8">শুরু করুন>ক্রিয়েট করতে,শেয়ার করতে আর উপার্জন করতে  অর্থাৎ (Create. Share. Earn).এই আনন্দের মহোৎসবে আমাদের প্রয়াস, আপনাদের জন্য !! আপনারা তৈরী তো?</string>
   <string name="lang_sel_express_yourself">১০-টি পৃথক ভাষায় মনের কথা বলুন!</string>
   <string name="select_language">ভাষা বাছুন</string>
   <string name="login_or_sign_up">লগ ইন অথবা সাইন আপ</string>
