--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -1549,13 +1549,21 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="earning_calculator">Earning Calculator</string>
   <string name="click_here_btn">Click to view leaderboard</string>
   <string name="checkout_growth_hack">Checkout the growth hacks</string>
-  <string name="blogger_gold_about_text">મોમસ્પ્રેસો ૧૦ વર્ષ પૂરા કરે છે! આ એક અદભુત સફર રહી છે અને અમે આ ખાસ દિવસ ને યાદગાર બનાવવા તત્પર છીએ. ઉત્સાહિત છો? હોવું પણ જોઈએ! આ જન્મદિવસ ના જલસા ના ઉપલક્ષમાં ૫ લાખ ની રકમ રાહ જોઈ રહી છે અમારા માનવવંત બ્લોગરો અને વી લોગરો ની! હા, આપ સૌ હકદાર છો વિજેતા ઘોષિત થવાના, અને આના માટે તમારે ફક્ત રચવાનું છે, શેર કરવાનું છે અને કમાણી આપોઆપ થશે. </string>
+  <string name="blogger_gold_about_text">અમે ઉત્સવ ના મૂડ માં છીએ અને તમને પણ અમારી સાથે જોડાવા આમંત્રણ છે!</string>
   <string name="webview_know_more">વધુ જાણો</string>
   <string name="leaderboard_faq">વારંવાર પૂછાતા પ્રશ્નો </string>
   <string name="click_below_btn">લિડર બોર્ડ જોવા નીચે ક્લિક કરો </string>
   <string name="rank_up">વાહ! તમે ગઈકાલ થી %1$d સ્થાન આગળ છો </string>
   <string name="rank_down">તમે %1$d સ્થાન નીચે પટકાયા! તમારું આગવું સ્થાન મેળવવા વધુ રચો અને શેર કરો!</string>
   <string name="rank_same">તમારું સ્થાન સુધારવા વધુ રચો અને શેર કરો!</string>
+  <string name="blogger_gold_about_text1">મોમસ્પ્રેસો ૧૦ વર્ષ પૂરા કરે છે! આ એક અદભુત સફર રહી છે અને અમે આ ખાસ દિવસ ને યાદગાર બનાવવા તત્પર છીએ. ઉત્સાહિત છો? હોવું પણ જોઈએ! આ જન્મદિવસ ના જલસા ના ઉપલક્ષમાં ૫ લાખ ની રકમ રાહ જોઈ રહી છે અમારા માનવવંતા બ્લોગરો અને વી લોગરો ની! હા, આપ સૌ હકદાર છો વિજેતા ઘોષિત થવાના, અને આના માટે તમારે ફક્ત રચવાનું છે, શેર કરવાનું છે અને કમાણી આપોઆપ થશે.</string>
+  <string name="blogger_gold_about_text2">કેવી રીતે?</string>
+  <string name="blogger_gold_about_text3">તમારી પાસે અનેરો અવસર છે, બ્લોગર્સ માટે ૪ લાખ અને વી લોગર્સ માટે ૧ લાખ ની રકમ જીતવાનો. તમે ફક્ત મોમસ્પ્રેસો પર તમારો બ્લોગ રચો, જો હજુ ન શરુ કર્યો હોય તો...</string>
+  <string name="blogger_gold_about_text4">તમારી કમાણી નો આધાર હશે ૧૦ ઓકટોબર થી ૨૦ નવેમ્બર ૨૦૨૦ દરમ્યાન તમારા બ્લોગ્સ અને વી લોગ્સ માટે આવેલ “ઓર્ગેનિક પેજ વ્યુઝ”. “ઓર્ગેનિક વ્યુઝ” એટલે એ તમામ વ્યુઝ જે મોમસ્પ્રેસો પર કોઈ પણ ચૂકવેલ પ્રમોશન વગર અજ તમારી રચનાત્મકતા ને હાંસલ થાય છે.</string>
+  <string name="blogger_gold_about_text5">આ સમય ગાળા દરમ્યાન ના તમારા તમામ બ્લોગ્સ અને વી લોગ્સ ના વ્યુઝ અને સાથે જ તમારા જૂના (આ સમય મર્યાદામાં) ફરી થી શેર કરાયેલ બ્લોગસ અને વી લોગ્સ(જે તમારા દ્વારા સોશિયલ મીડિયા અથવા વોટ્સ એપ વગેરે ગ્રૂપમાં શેર કરાયા હોય) ના ઓર્ગેનિક વ્યુઝ ની ગણતરી થશે. કમાણી કરો આ અદ્વિતીય અવસર દ્વારા!</string>
+  <string name="blogger_gold_about_text6">It’s that simple. The higher the number of organic views of your blogs/vlogs, the higher YOUR share of the 5 Lakhs you will receive! </string>
+  <string name="blogger_gold_about_text7">Click here to know more.</string>
+  <string name="blogger_gold_about_text8">છે ને આ એક અભૂતપૂર્વ અવસર? તો રાહ શેની જુઓ છો? આજે જ શરૂઆત કરો રચવાની, શેર કરવાની અને કમાણી કરો! </string>
   <string name="lang_sel_express_yourself">પોતાની જાત ને ૧૦ ભાષાઓ માં વ્યક્ત કરો </string>
   <string name="select_language">ભાષા પસંદ કરો </string>
   <string name="login_or_sign_up">લોગીન અથવા સાઇન અપ </string>
