--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -1458,13 +1458,21 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="earning_calculator">Earning Calculator</string>
   <string name="click_here_btn">Click to view leaderboard</string>
   <string name="checkout_growth_hack">Checkout the growth hacks</string>
-  <string name="blogger_gold_about_text">मॉम्सप्रेस्सो 10 साल का हो गया है! यह सफ़र एक अद्भुत सफ़र रहा है और हम इस विशेष दिन को मनाने के लिए कुछ बड़ा और अनोखा करना चाहते थे. आप भी उत्साहित हैं न ? होना भी चाहिए क्योंकि हमारे10th बर्थडे बोनांजा के मासिक उत्सव के अवसर पर आप हो सकते हैं 5 लाख रुपयों तक के हकदार !!</string>
+  <string name="blogger_gold_about_text">हमारे लिए यह एक उत्सव की तरह है और हम आपको इसमें शामिल करना चाहते हैं!</string>
   <string name="webview_know_more">अधिक जानिए</string>
   <string name="leaderboard_faq">पूछे जाने वाले प्रश्न</string>
   <string name="click_below_btn">लीडरबोर्ड देखने के लिए नीचे क्लिक करें</string>
   <string name="rank_up">वाह! आप कल से %1$d पोजीशन ऊपर हैं</string>
   <string name="rank_down">आप %1$d पोजीशन से नीचे आ गए हैं ! अपनी पोजीशन सुधारने के लिए क्रिएट करें और शेयर करें!</string>
   <string name="rank_same">अपनी पोजीशन सुधारने के लिए क्रिएट करें और शेयर करें!</string>
+  <string name="blogger_gold_about_text1">मॉम्सप्रेस्सो 10 साल का हो गया है! यह सफ़र एक अद्भुत सफ़र रहा है और हम इस विशेष दिन को मनाने के लिए कुछ बड़ा और अनोखा करना चाहते थे. आप भी उत्साहित हैं न ? होना भी चाहिए क्योंकि हमारे 10th बर्थडे बोनांजा के मासिक उत्सव के अवसर पर आप हो सकते हैं 5 लाख रुपयों तक के हकदार!</string>
+  <string name="blogger_gold_about_text2">आपको क्या करना होगा?</string>
+  <string name="blogger_gold_about_text3">मॉम्सप्रेस्सो पर एक ब्लॉग या मॉम वी लॉग क्रिएट करें अगर आपने अब तक नहीं किया है.</string>
+  <string name="blogger_gold_about_text4">ऑर्गेनिक पेज व्यूज पाने के लिए अपने ब्लॉग्स और वी लॉग्स को अपने दोस्तों, परिवार और सोशल ग्रुप्स में  10 अक्टूबर से 20 नवम्बर के बीच शेयर करें . ऑर्गेनिक व्यूज को बढ़ाने के लिए आप अपने 10 अक्टूबर से पहले प्रकाशित ब्लॉग्स और वी लॉग्स को दोबारा भी शेयर कर सकते हैं .</string>
+  <string name="blogger_gold_about_text5">मॉम्सप्रेस्सो पर कुल ऑर्गेनिक पेज व्यूज में आपके योगदान के आधार पर पर 5 लाख में से अपना हिस्सा कमायें !</string>
+  <string name="blogger_gold_about_text6">यह बेहद आसान है. आपके ब्लॉग्स और वी लॉग्स के ऑर्गेनिक व्यूज जितने ज्यादा होंगे , 5 लाख में उतना अधिक हिस्सा आपको मिलेगा !</string>
+  <string name="blogger_gold_about_text7">अधिक जानकारी के लिए यहाँ क्लिक करें </string>
+  <string name="blogger_gold_about_text8">उत्सव  में हिस्सा लेने के लिए तैयार हैं?तो फिर आप किस का इंतजार कर रहे हैं?अभी क्रिएट करें, शेयर करें, और कमायें!</string>
   <string name="lang_sel_express_yourself">10 भाषाओं में खुद को व्यक्त करें</string>
   <string name="select_language">भाषा चुनें</string>
   <string name="login_or_sign_up">लॉग इन या साइन अप करें</string>
