--- a/app/src/main/res/values-kn/strings.xml
+++ b/app/src/main/res/values-kn/strings.xml
@@ -1477,13 +1477,21 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="earning_calculator">Earning Calculator</string>
   <string name="click_here_btn">Click to view leaderboard</string>
   <string name="checkout_growth_hack">Checkout the growth hacks</string>
-  <string name="blogger_gold_about_text">ಮಾಮ್ಸ್ ಪ್ರೆಸೊ ವೇದಿಕೆಗೆ ಹತ್ತು ವರ್ಷಗಳು ತುಂಬಿವೆ. ಇದೊಂದು ಅದ್ಭುತವಾದ ಪಯಣ. ಅದಕ್ಕಾಗಿ ಈ ವಿಶೇಷ ದಿನವನ್ನು ವಿಶಿಷ್ಟವಾಗಿ ಆಚರಿಸಲು ಏನಾದರೂ ವಿಶೇಷವನ್ನೇ ಮಾಡಬೇಕೆಂಬುದು ನಮ್ಮ ಆಸೆಯಾಗಿತ್ತು. ಕುತೂಹಲ ಹೆಚ್ಚುತ್ತಿದೆಯಾ? ಹೆಚ್ಚಲೇಬೇಕು. ಏಕೆಂದರೆ ನಮ್ಮ ಹುಟ್ಟುಹಬ್ಬದ ತಿಂಗಳನ್ನು ಸಂಭ್ರಮಿಸಲು 5 ಲಕ್ಷ ಮೊತ್ತವನ್ನು ನಿಮ್ಮೆಲ್ಲರಿಗಾಗಿ ಮೀಸಲಿಟ್ಟಿದ್ದೇವೆ. ಈ ಹಣವನ್ನು ನೀವೂ ಗೆಲ್ಲಬಹುದು. ಮಾಡಬೇಕಾಗಿರುವುದು ಇಷ್ಟೇ!! ಬರಹವನ್ನು ರಚಿಸಿ, ಹಂಚಿಕೊಳ್ಳಿ ಮತ್ತು ಗೆಲ್ಲಿರಿ.</string>
+  <string name="blogger_gold_about_text">ಈ ಹತ್ತನೇ ವರ್ಷಾಚರಣೆಯನ್ನು ನಾವು ಸಂಭ್ರಮಿಸಲು ಬಯಸುತ್ತೇವೆ... ನಿಮ್ಮ ಜೊತೆಗೆ!</string>
   <string name="webview_know_more">ಇನ್ನು ಹೆಚ್ಚು ತಿಳಿಯಿರಿ</string>
   <string name="leaderboard_faq">ಹೆಚ್ಚು ಕೇಳಲ್ಪಟ್ಟ ಪ್ರಶ್ನೆಗಳು</string>
   <string name="click_below_btn">ಲೀಡರ್ ಬೋರ್ಡ್ ನೋಡಲು ಇಲ್ಲಿ ಕ್ಲಿಕ್ ಮಾಡಿ</string>
   <string name="rank_up">ಎಸ್.. ನೀವು %1$d ನಿನ್ನೆಗಿಂತ ಮೇಲಿನ ಸ್ಥಾನಕ್ಕೇರಿದ್ದೀರಿ</string>
   <string name="rank_down">ನೀವು ರಚಿಸಿದ್ದು %1$d ಸ್ಥಾನ! ರಚಿಸಿ. ಹಂಚಿರಿ. ಮತ್ತು ನಿಮ್ಮ ಸ್ಥಾನವನ್ನು ಮೇಲ್ದರ್ಜೆಗೆ ಏರಿಸಿ</string>
   <string name="rank_same">ರಚಿಸಿ ಮತ್ತು ಹಂಚಿರಿ..ನಿಮ್ಮ ಸ್ಥಾನವನ್ನು ಮೇಲ್ದರ್ಜೆಗೆ ಏರಿಸಿ</string>
+  <string name="blogger_gold_about_text1">मॉम्सप्रेस्सो 10 साल का हो गया है! यह सफ़र एक अद्भुत सफ़र रहा है और हम इस विशेष दिन को मनाने के लिए कुछ बड़ा और अनोखा करना चाहते थे. आप भी उत्साहित हैं न ? होना भी चाहिए क्योंकि हमारे 10th बर्थडे बोनांजा के मासिक उत्सव के अवसर पर आप हो सकते हैं 5 लाख रुपयों तक के हकदार!</string>
+  <string name="blogger_gold_about_text2">ಹಾಗಾದರೆ ನೀವೇನು ಮಾಡಬೇಕು?</string>
+  <string name="blogger_gold_about_text3">ಹಂಚಿರಿ : ನಿಮ್ಮ ಬ್ಲಾಗ್ ಮತ್ತು ವ್ಲೋಗ್ ಗಳ ವೀಕ್ಷಣೆಗಳನ್ನು ಹೆಚ್ಚಿಸಲು ನಿಮ್ಮ ಕುಟುಂಬದವರ ಜೊತೆ, ಸ್ನೇಹಿತರ ಜೊತೆ ಸೋಶಿಯಲ್ ಮಿಡಿಯಾಗಳಲ್ಲಿ ಹಂಚಿಕೊಳ್ಳಿ. ವೀಕ್ಷಣೆಗಳ ಸಂಖ್ಯೆಯನ್ನು ಹೆಚ್ಚಿಸಲು ನೀವು ಈ ಮುಂಚೆ ರಚಿಸಿರುವ ಬ್ಲಾಗ್ ಮತ್ತು ವ್ಲೋಗ್ ಗಳನ್ನು ಹಂಚಿಕೊಳ್ಳಬಹುದು. 10 ಅಕ್ಟೋಬರ್ ಮತ್ತು 20 ನವೆಂಬರ್ 2020 ರ ನಡುವೆ ಆರ್ಗಾನಿಕ್ ಪೇಜ್ ವೀಕ್ಷಣೆಗಳನ್ನು ನಾವು ಪರಿಗಣಿಸುತ್ತೇವೆ.</string>
+  <string name="blogger_gold_about_text4">Share your blogs and vlogs with your network of friends, family and social groups to get ORGANIC PAGE VIEWS between 10th Oct and 20th Nov 2020. You can also reshare your blogs and vlogs published before the 10th of Oct, 2020 to increase these organic views.</string>
+  <string name="blogger_gold_about_text5">Earn a share of the 5 Lakhs, based on YOUR contribution to the TOTAL organic page views on Momspresso.</string>
+  <string name="blogger_gold_about_text6">It’s that simple. The higher the number of organic views of your blogs/vlogs, the higher YOUR share of the 5 Lakhs you will receive! </string>
+  <string name="blogger_gold_about_text7">Click here to know more</string>
+  <string name="blogger_gold_about_text8">Ready to start celebrating? What are you waiting for? Start to CREATE. SHARE. EARN now! </string>
   <string name="lang_sel_express_yourself">10 ಭಾಷೆಗಳಲ್ಲಿ ನಿಮ್ಮ ಭಾವನೆಗಳನ್ನು ವ್ಯಕ್ತಪಡಿಸಬಹುದು</string>
   <string name="select_language">ನಿಮ್ಮ ಭಾಷೆಯನ್ನು ಆಯ್ಕೆ ಮಾಡಿ</string>
   <string name="login_or_sign_up">ಲಾಗ್ ಇನ್ / ಸೈನ್ ಅಪ್</string>
