--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -1481,13 +1481,21 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="earning_calculator">Earning Calculator</string>
   <string name="click_here_btn">Click to view leaderboard</string>
   <string name="checkout_growth_hack">Checkout the growth hacks</string>
-  <string name="blogger_gold_about_text">മോംസ്പ്രെസ്സോയ്ക്ക് 10 വയസ് തികയുന്നു. ഈ വലിയ നേട്ടത്തിന് വലിയ ആഘോഷം തന്നെ വേണമല്ലോ? ആവേശകരമായ ഒരു മത്സരമാണ് പത്താം ബർത്ത്ഡേ ബൊണാൻസയുടെ ഭാഗമായി ഞങ്ങൾ ഒരുക്കിയിരിക്കുന്നത് - 5 ലക്ഷം രൂപയുടെ സമ്മാനങ്ങൾ നിങ്ങൾക്കായി മാത്രം!</string>
+  <string name="blogger_gold_about_text">നിങ്ങളില്ലാതെ ഞങ്ങൾക്കെന്ത് ആഘോഷം? അപ്പോൾ വരൂ, ഈ ജന്മദിനം നമുക്ക് ഒരുമിച്ച് ആഘോഷിക്കാം!</string>
   <string name="webview_know_more">കൂടുതൽ അറിയുക</string>
   <string name="leaderboard_faq">പതിവുചോദ്യങ്ങൾ</string>
   <string name="click_below_btn">ലീഡർബോർഡുകൾ കാണുന്നതിന് ചുവടെ ക്ലിക്കുചെയ്യുക</string>
   <string name="rank_up">കൊള്ളാം! ഇന്നലെ മുതൽ നിങ്ങളുടെ സ്ഥാനം %1$d ആണ്.</string>
   <string name="rank_down">നിങ്ങൾ %1$d സ്ഥാനങ്ങൾ താഴേക്ക് പോന്നിരിക്കുന്നു! നിങ്ങളുടെ സ്ഥാനം മെച്ചപ്പെടുത്തുന്നതിന് കൂടുതൽ സൃഷ്ടിക്കുകയും പങ്കിടുകയും ചെയ്യുക!</string>
   <string name="rank_same">നിങ്ങളുടെ സ്ഥാനം മെച്ചപ്പെടുത്തുന്നതിന് സൃഷ്ടിക്കുകയും പങ്കിടുകയും ചെയ്യുക!</string>
+  <string name="blogger_gold_about_text1">മോംസ്പ്രെസ്സോയ്ക്ക് 10 വയസ് തികയുന്നു. ഈ വലിയ നേട്ടത്തിന് വലിയ ആഘോഷം തന്നെ വേണമല്ലോ? ആവേശകരമായ ഒരു മത്സരമാണ് പത്താം ബർത്ത്ഡേ ബൊണാൻസയുടെ ഭാഗമായി ഞങ്ങൾ ഒരുക്കിയിരിക്കുന്നത് - 5 ലക്ഷം രൂപയുടെ സമ്മാനങ്ങൾ നിങ്ങൾക്കായി മാത്രം!</string>
+  <string name="blogger_gold_about_text2">സമ്മാനം നേടാൻ നിങ്ങൾ എന്ത് ചെയ്യണം?</string>
+  <string name="blogger_gold_about_text3">മോംസ്പ്രെസ്സോയിൽ നിങ്ങളുടെ ബ്ലോഗ്/വ്ലോഗ് എന്നിവ സൃഷ്ടിച്ചിട്ടില്ലെങ്കിൽ, അവ സൃഷ്ടിക്കൂ.</string>
+  <string name="blogger_gold_about_text4">നിങ്ങളുടെ സൃഷ്ടികൾ കൂട്ടുകാർ, ബന്ധുക്കൾ, സോഷ്യൽ ഗ്രൂപ്പുകൾ എന്നിവരുമായി ഷെയർ ചെയ്യൂ. 	ഒക്ടോബർ 10 - നവംബർ 20, 2020 കാലയളവിൽ അവയ്ക്ക് ലഭിക്കുന്ന ഓർഗാനിക് വ്യൂ ആണ് മത്സരത്തിൽ പരിഗണിക്കുന്നത്. ഒക്ടോബർ 10 ന് മുൻപ് നിങ്ങൾ പബ്ലിഷ് ചെയ്‌ത സൃഷ്ടികൾ വീണ്ടും ഷെയർ ചെയ്തും  ഓർഗാനിക് വ്യൂ വർദ്ധിപ്പിക്കാം.</string>
+  <string name="blogger_gold_about_text5">മോംസ്പ്രെസ്സോയുടെ മൊത്തം ഓർഗാനിക് വ്യൂവിൽ നിങ്ങളുടെ പങ്കാളിത്തം എത്ര ശതമാനം ആണോ അതിനനുസരിച്ച് നിങ്ങൾക്ക് സമ്പാദിക്കാം. 5 ലക്ഷം രൂപയിൽ ഒരു ഭാഗം നിങ്ങൾക്ക് നേടാം എന്നർത്ഥം. ആ സമ്പാദ്യം നിർണയിക്കുന്നത് നിങ്ങളുടെ ഓർഗാനിക് വ്യൂ ആണ്.</string>
+  <string name="blogger_gold_about_text6">എന്താ ലളിതമല്ലേ? നിങ്ങളുടെ ഓർഗാനിക് വ്യൂ കൂടുന്നതിന് അനുസരിച്ച് നിങ്ങളുടെ സമ്പാദ്യവും കൂടും. </string>
+  <string name="blogger_gold_about_text7">കൂടുതൽ അറിയാൻ ഇവിടെ ക്ലിക്ക് ചെയ്യൂ</string>
+  <string name="blogger_gold_about_text8">അപ്പോൾ ആഘോഷങ്ങൾ തുടങ്ങുകയല്ലേ? ഇനി എന്തിനാണ് കാത്തിരിക്കുന്നത്? സൃഷ്ടിക്കൂ. ഷെയർ ചെയ്യൂ. സമ്പാദിക്കൂ. </string>
   <string name="lang_sel_express_yourself">10 ഭാഷകളിൽ ആശയാവിഷ്കാരം നടത്തുക </string>
   <string name="select_language">ഭാഷ തിരഞ്ഞെടുക്കുക</string>
   <string name="login_or_sign_up">ലോഗിൻ ചെയ്യുക അല്ലെങ്കിൽ സൈൻ അപ്പ് ചെയ്യുക</string>
