--- a/app/src/main/res/values-mr/strings.xml
+++ b/app/src/main/res/values-mr/strings.xml
@@ -1435,13 +1435,21 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="earning_calculator">Earning Calculator</string>
   <string name="click_here_btn">Click to view leaderboard</string>
   <string name="checkout_growth_hack">Checkout the growth hacks</string>
-  <string name="blogger_gold_about_text">मॉम्सप्रेसो ला१० वर्ष पूर्ण झाली! हा एक अविश्वसनीय प्रवास आहे आणि आम्हाला हा खास दिवस साजरा करण्यासाठी काहीतरी खूप मोठं करण्याची इच्छा होती. तुमचा उत्साह नक्कीच वाढला असेल ना? वाढलाच असेल ! आमच्या वाढदिवसाच्या महिन्यासाठी, 5 लाख रुपये बक्षिसांची लयलूट होणार आहे आणि आपण सर्वजण जिंकण्यासाठी पात्र आहात!</string>
+  <string name="blogger_gold_about_text">आम्ही आनंदोत्सव साजरा करीत आहोत आणि त्यात तुमचा सहभाग असणारच आहे !</string>
   <string name="webview_know_more">अधिक जाणून घ्या</string>
   <string name="leaderboard_faq">सर्वाधिक विचारले जाणारे  प्रश्न</string>
   <string name="click_below_btn">लीडरबोर्ड पाहण्यासाठी खाली क्लिक करा</string>
   <string name="rank_up">वा! तुम्ही काल पासून %1$d या क्रमवारी मध्ये आहात. </string>
   <string name="rank_down">तुमची क्रमवारी %1$d ने खाली आली आहे. यासाठी तयार करा, शेअर करा! </string>
   <string name="rank_same">तुमची क्रमवारी वाढवण्यासाठी  तयार करा, शेअर करा!</string>
+  <string name="blogger_gold_about_text1">मॉमप्रेस्सो 10 वर्षाचा! हा एक अविश्वसनीय प्रवास आहे आणि आम्हाला हा खास दिवस साजरा करण्यासाठी काहीतरी मोठे करण्याची इच्छा होती. कुतूहल जाग झालं ना? आमच्या 10 व्या वाढदिवशी बोनांझा महिन्यासाठी 5 लाख रुपये बक्षिसांची लयलूट आहे आणि आपण सर्वजण जिंकण्यासाठी पात्र आहात!</string>
+  <string name="blogger_gold_about_text2">आपल्याला काय करावे लागेल?</string>
+  <string name="blogger_gold_about_text3">तुम्ही मॉम्सप्रेसो वर  आधीपासून नसल्यास, मॉमप्रेसो येथे ब्लॉग किंवा व्हीलॉग  तयार करा.</string>
+  <string name="blogger_gold_about_text4"> 10 ऑक्टोबर ते 20 नोव्हेंबर 2020 दरम्यान ऑर्गेनिक पेज व्ह्यूज मिळविण्यासाठी तुमचा  ब्लॉग व्हिलॉग  मित्र आणि कुटुंबियांसोबत शेअर  करा. ऑरगॅनिक व्हीव्यूज  वाढवण्यासाठी तुम्ही  10 ऑक्टोबर 2020 पूर्वी प्रकाशित केलेले ब्लॉग्ज आणि व्हिलॉग पुन्हा शेअर करू शकता.</string>
+  <string name="blogger_gold_about_text5">मॉम्सप्रेसो वरील  एकूण ऑरगॅनिक  पृष्ठ व्हीव्यूजमध्ये तुमच्या  योगदानावर आधारित 5 लाखांचा वाटा मिळवा.</string>
+  <string name="blogger_gold_about_text6">हे इतके सोपे आहे. आपल्या ब्लॉग / व्हिलॉग्ज ऑरगॅनिक व्हीव्यूज ची  संख्या जितकी जास्त असेल तितक्या मोठ्या प्रमाणात आपल्यास प्राप्त होईल 5 लाख!</string>
+  <string name="blogger_gold_about_text7">अधिक जाणून घेण्यासाठी येथे क्लिक करा</string>
+  <string name="blogger_gold_about_text8">उत्सव सुरू करण्यास तयार आहात?तुम्ही वाट  कशाची पहात आहात ? तयार करण्यास प्रारंभ करा. शेअर करा. आता कमवा!</string>
   <string name="lang_sel_express_yourself">स्वत: ला 10 भाषांमध्ये व्यक्त करु शकता</string>
   <string name="select_language">भाषा निवडा</string>
   <string name="login_or_sign_up">लॉगिन किंवा साइन अप करा</string>
