--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1433,13 +1433,21 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="earning_calculator">Earning Calculator</string>
   <string name="click_here_btn">Click to view leaderboard</string>
   <string name="checkout_growth_hack">Checkout the growth hacks</string>
-  <string name="blogger_gold_about_text">மாம்ஸ்ப்ரெஸ்ஸோ பத்தாவது ஆண்டில் அடியெடுத்து வைக்கிறது! இந்த சிறப்பான தருணத்தை மேலும் சிறப்பாக்குவதற்கு நாங்கள் பெரிய திட்டங்களை வகுத்திருக்கிறோம். என்னவென்று தெரிந்து கொள்ள ஆவலாக இருக்கிறதா? எங்களது இந்த பத்தாவது பிறந்த நாள் கொண்டாட்டத்தை முன்னிட்டு, நீங்கள் பரிசாக பெற 5 லட்ச ரூபாய் காத்துக் கொண்டிருக்கிறது, மற்றும் நீங்கள் அனைவருமே இந்த பரிசைப் பெற தகுதியானவர்கள்!</string>
+  <string name="blogger_gold_about_text">கொண்டாட்டத்திற்கான நேரம் இது.  எங்களுடைய இந்த வெற்றிப்பயணத்தில் உங்களையும் அழைத்துச்செல்ல விரும்புகிறோம். </string>
   <string name="webview_know_more">மேலும் அறிய</string>
   <string name="leaderboard_faq">அடிக்கடி கேட்கப்படும் கேள்விகள்</string>
   <string name="click_below_btn">முன்னிலை பட்டியல்  பார்க்க கீழே க்ளிக் செய்யுங்கள் </string>
   <string name="rank_up">ஆஹா! நேற்றைவிட நீங்கள் %1$d இடங்கள் முன்னேறி இருக்கிறீர்கள்</string>
   <string name="rank_down">நீங்கள் %1$d இடங்கள் பின்னே சென்றுவிட்டீர்கள். உங்கள் இடத்தை முன்னேற்ற படைப்புகளை உருவாக்கி பகிருங்கள்</string>
   <string name="rank_same">உங்கள் இடத்தை முன்னேற்ற படைப்புகளை உருவாக்கி பகிருங்கள்</string>
+  <string name="blogger_gold_about_text1">மாம்ஸ்ப்ரெஸ்ஸோ  தளம் நிறுவப்பட்டு 10 ஆண்டுகள் கடந்துவிட்ட இந்த இனிய தருணத்தை  உங்களோடு கொண்டாடவே இந்த 10ஆம்  ஆண்டு பிறந்தநாள்  கொண்டாட்டம் .இந்த கொண்டாடத்தின் வாயிலாக  படைப்பாளர்களான  நீங்கள் 5 லட்ச ரூபாய் வரை பரிசாக வெல்லலாம். மேலும் இதன் வாயிலாக உங்களில் யார் வேண்டுமானாலும் எவ்வளவு  பணம் வேண்டுமானாலும் பரிசுத்தொகையாக  பெறலாம்.</string>
+  <string name="blogger_gold_about_text2">நீங்கள் செய்ய வேண்டியவை :</string>
+  <string name="blogger_gold_about_text3">உருவாக்கு - இதுவரை தளத்தில் வலைப்பதிவுகளோ  அல்லது விலாக்களோ  எதுவும் உருவாக்கவில்லை என்றால் இன்றே உருவாக்குங்கள்.</string>
+  <string name="blogger_gold_about_text4">பகிர் - அக்டோபர்  10 முதல் நவம்பர் 20 ஆம் தேதி வரை  நீங்கள் படைத்த  வலைப்பதிவுகள்  மற்றும் விலாக்களை உங்கள் உறவினர்கள், நண்பர்கள் மற்றும் சமூக வலைத்தளம் வாயிலாக பகிர்ந்து படைப்பின்  தன்னிச்சையான* பார்வையாளர்கள் எண்ணிக்கையை அதிகரியுங்கள்.  குறிப்பிட்ட நாட்களில் வெளியிடும் பதிவுகள்  மட்டுமல்லாமல் இதற்கு முன்பு  நீங்கள் படைத்த பழைய படைப்புகளையும் பகிரலாம் .</string>
+  <string name="blogger_gold_about_text5">ஈட்டு - உங்கள் பதிவுகளினால்  மாம்ஸ்ப்ரெஸ்ஸோ தளத்திற்கு கிடைக்கும் தன்னிச்சையான* பார்வையாளர்கள் எண்ணிக்கைக்கு ஏற்ப 5 லட்ச ரூபாயிலிருந்து  சிறிய பகுதியை  உங்களுடையதாக்கிக் கொள்ளுங்கள்.</string>
+  <string name="blogger_gold_about_text6">It’s that simple. The higher the number of organic views of your blogs/vlogs, the higher YOUR share of the 5 Lakhs you will receive! </string>
+  <string name="blogger_gold_about_text7">விவரங்களுக்கு படியுங்கள்</string>
+  <string name="blogger_gold_about_text8">கொண்டாட்டத்திற்கு தயாராகிவிட்டிர்களா?எதற்காக காத்துக்கொண்டிருக்கிறீர்கள்? இப்போதே படைப்புகளை உருவாக்கி, பகிர்ந்து பணத்தை ஈட்டும் வாய்ப்பினை பயன்படுத்திக்கொள்ளுங்கள்.</string>
   <string name="lang_sel_express_yourself">உங்களின் உணர்ச்சிகளை 10 மொழிகளில்  வெளிப்படுத்தலாம்</string>
   <string name="select_language">மொழியை தேர்ந்தெடு</string>
   <string name="login_or_sign_up">உள்நுழை (அ) பதிவு செய்</string>
