--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -1437,13 +1437,21 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="earning_calculator">Earning Calculator</string>
   <string name="click_here_btn">Click to view leaderboard</string>
   <string name="checkout_growth_hack">Checkout the growth hacks</string>
-  <string name="blogger_gold_about_text">మామ్స్‌ప్రెస్సోకి పదేళ్లు! ఇది నమ్మశక్యం కాని ప్రయాణం, ఈ ప్రత్యేకమైన  రోజు జ్ఞాపకాల్ని గొప్పగా రూపొందించాలనుకుంటున్నాము. ఉత్సాహంగా ఉందా? అదే కోరుకుంటున్నాము! మా 10th బర్త్‌డే బొనాంజా నెలలో, 5 లక్షల దాకా మీ అందరికీ గెలవడానికి అర్హత ఉంది!</string>
+  <string name="blogger_gold_about_text">మా 10వ వార్షికోత్సవ సంబరాల ప్రయాణంలో మీరు భాగస్వాములు కావాలని కోరుకుంటున్నాము!</string>
   <string name="webview_know_more">మరింత తెలుసుకోండి</string>
   <string name="leaderboard_faq">తరచుగా అడిగే ప్రశ్నలు</string>
   <string name="click_below_btn">లీడర్‌బోర్డ్‌లను వీక్షించడానికి క్రింద క్లిక్ చేయండి</string>
   <string name="rank_up">అవును! మీరు నిన్నటి నుండి %1$d స్థానం కంటే పైన ఉన్నారు </string>
   <string name="rank_down">మీరు %1$d స్థానాలకు కింద ఉన్నారు! మీ స్థానాన్ని మెరుగుపరచడానికి క్రియేట్ చేసి షేర్ చేయండి!</string>
   <string name="rank_same">మీ స్థానాన్ని మెరుగుపరచడానికి క్రియేట్ చేసి షేర్ చేయండి!</string>
+  <string name="blogger_gold_about_text1">మామ్స్ ప్రెస్సోకి పదేళ్లు! ఇది నమ్మశక్యం కాని ప్రయాణం. ఈ ప్రత్యేకమైన రోజు జ్ఞాపకాలను మరింత సుందరంగా తీర్చిదిద్దాలని రూపకల్పన చేస్తున్నాము. ఉత్సాహంగా ఉందా? మీరు ఎదురుచూస్తున్నారని మాకు తెలుసు! మా 10th బర్త్‌డే బొనాంజాలో ఒక  నెలలో, 5 లక్షల దాకా గెలుచుకోవడానికి మీ అందరికీ అవకాశం ఉంది!</string>
+  <string name="blogger_gold_about_text2">మీరు ఏం చేయాలి?</string>
+  <string name="blogger_gold_about_text3">క్రియేట్: మీరు ఇప్పటికే మామ్స్ ప్రెస్సోలో క్రియేటర్ కాకపోతే, మామ్స్ ప్రెస్సోలో ఒక బ్లాగ్ లేదా వ్లాగ్ పోస్ట్ చేయండి .</string>
+  <string name="blogger_gold_about_text4">షేర్: 10 అక్టోబర్ మరియు 20 నవంబర్ 2020 మధ్య ఆర్గానిక్ పేజ్ వ్యూస్ పొందడానికి మీ స్నేహితులకు, కుటుంబ సభ్యులకు మరియు సామాజిక సమూహాల నెట్‌వర్క్‌తో మీ బ్లాగులు మరియు వ్లాగ్‌లను షేర్ చేయండి. ఈ ఆర్గానిక్ వీక్షణలను పెంచడానికి మీరు 2020 అక్టోబర్ 10 ముందు ప్రచురించిన మీ బ్లాగులు మరియు వ్లాగ్‌లను కూడా తిరిగి పంచుకోవచ్చు.</string>
+  <string name="blogger_gold_about_text5">సంపాదించండి: మామ్‌ప్రెస్సోపై మొత్తం ఆర్గానిక్  పేజీ వీక్షణలకు మీరు 5 లక్షల రూపాయల్లో వాటాను సంపాదించండి.</string>
+  <string name="blogger_gold_about_text6">ఇది చాలా సులభం. మీ బ్లాగులు / వ్లాగ్‌ల యొక్క ఆర్గానిక్  వీక్షణల సంఖ్య ఎంత ఎక్కువగా ఉంటే  మీరు అందుకునే 5 లక్షల్లో మీ వాటా అంత ఎక్కువ ఉంటుంది!</string>
+  <string name="blogger_gold_about_text7">మరింత తెలుసుకోవడానికి ఇక్కడ క్లిక్ చేయండి</string>
+  <string name="blogger_gold_about_text8">సంబరాలు జరుపుకోవడానికి సిద్ధంగా ఉన్నారా? వేచిచూడ్డం దేనికి? క్రియేట్. షేర్. సంపాదించండి</string>
   <string name="lang_sel_express_yourself">మీరు 10 భాషలలో మిమ్మల్ని మీరు వ్యక్తపరచవచ్చు </string>
   <string name="select_language">భాషను ఎంచుకోండి</string>
   <string name="login_or_sign_up">లాగిన్ అవ్వండి లేదా సైన్ అప్ చేయండి</string>
