--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1598,13 +1598,21 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="earning_calculator">Earning Calculator</string>
   <string name="click_here_btn">Click to view leaderboard</string>
   <string name="checkout_growth_hack">Checkout the growth hacks</string>
-  <string name="blogger_gold_about_text">Momspresso’s turning 10! It\'s been an incredible journey and we wanted to do something B-I-G to commemorate this special day. Excited? You should be! For our 10th Birthday Bonanza month, 5 Lakhs will be up for grabs, and all of you are entitled to win!</string>
+  <string name="blogger_gold_about_text">We feel like celebrating and want you along for the ride!</string>
   <string name="webview_know_more">Know more</string>
   <string name="leaderboard_faq">FAQs</string>
   <string name="click_below_btn">Click below to view leaderboards</string>
   <string name="rank_up">Yay! You are %1$d positions up from yesterday</string>
   <string name="rank_down">You dropped %1$d places! Create and share to improve your position!</string>
   <string name="rank_same">Create and share to improve your position!</string>
+  <string name="blogger_gold_about_text1">Momspresso’s turning 10! It\'s been an incredible journey and we wanted to do something B-I-G to commemorate this special day. Excited? You should be! For our 10th Birthday Bonanza month, 5 Lakhs will be up for grabs, and all of you are entitled to win!</string>
+  <string name="blogger_gold_about_text2">What do you have to do?</string>
+  <string name="blogger_gold_about_text3">Create a blog or vlog at Momspresso, if you haven\'t already.</string>
+  <string name="blogger_gold_about_text4">Share your blogs and vlogs with your network of friends, family and social groups to get ORGANIC PAGE VIEWS between 10th Oct and 20th Nov 2020. You can also reshare your blogs and vlogs published before the 10th of Oct, 2020 to increase these organic views.</string>
+  <string name="blogger_gold_about_text5">Earn a share of the 5 Lakhs, based on YOUR contribution to the TOTAL organic page views on Momspresso.</string>
+  <string name="blogger_gold_about_text6">It’s that simple. The higher the number of organic views of your blogs/vlogs, the higher YOUR share of the 5 Lakhs you will receive! </string>
+  <string name="blogger_gold_about_text7">Click here to know more</string>
+  <string name="blogger_gold_about_text8">Ready to start celebrating? What are you waiting for? Start to CREATE. SHARE. EARN now! </string>
   <string name="lang_sel_express_yourself">Express Yourself in 10 Languages</string>
   <string name="select_language">Select Language</string>
   <string name="login_or_sign_up">Login or Sign up</string>
