--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -1498,13 +1498,21 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="earning_calculator">Earning Calculator</string>
   <string name="click_here_btn">Click to view leaderboard</string>
   <string name="checkout_growth_hack">Checkout the growth hacks</string>
-  <string name="blogger_gold_about_text">ਮੌਮਸਪ੍ਰੈਸੋ ਦੇ 10 ਸਾਲ ਪੂਰੇ ਹੋ ਰਹੇ ਹਨ! ਇਹ ਇਕ ਸ਼ਾਨਦਾਰ ਯਾਤਰਾ ਰਹੀ ਹੈ ਅਤੇ ਇਸ ਵਿਸ਼ੇਸ਼ ਦਿਨ ਨੂੰ ਯਾਦਗਾਰੀ ਬਣਾਉਣ ਲਈ ਅਸੀਂ ਕੁਝ ਵੱਡਾ ਕਰਨਾ ਚਾਹੁੰਦੇ ਸੀ। ਤੁਸੀਂ ਵੀ ਉਤਸ਼ਾਹਿਤ ਹੋ ਗਏ ਨਾ ? ਤੁਹਾਨੂੰ ਹੋਣਾ ਵੀ ਚਾਹੀਦਾ ਹੈ! ਸਾਡੇ ਜਨਮਦਿਨ ਦੇ ਮਹੀਨੇ ਲਈ, 5 ਲੱਖ ਰੁਪਏ ਤੱਕ ਦੇ ਇਨਾਮ ਦਿੱਤੇ ਜਾਣਗੇ, ਅਤੇ ਤੁਸੀਂ ਸਾਰੇ ਇਸ ਇਨਾਮ ਨੂੰ ਜਿੱਤਣ ਦੇ ਹੱਕਦਾਰ ਹੋ!</string>
+  <string name="blogger_gold_about_text">ਅਸੀਂ ਜਸ਼ਨ ਮਨਾਉਣ ਦੀ ਤਿਆਰੀ ਵਿੱਚ ਹਾਂ ਅਤੇ ਚਾਹੁੰਦੇ ਹਾਂ ਕਿ ਤੁਸੀਂ ਵੀ ਇਸ ਵਿੱਚ ਸ਼ਾਮਲ ਹੋਵੋ!</string>
   <string name="webview_know_more">ਹੋਰ ਜਾਣੋ</string>
   <string name="leaderboard_faq">ਅਕਸਰ ਪੁੱਛੇ ਜਾਂਦੇ ਪ੍ਰਸ਼ਨ</string>
   <string name="click_below_btn">ਲੀਡਰਬੋਰਡ ਦੇਖਣ ਲਈ ਹੇਠਾਂ ਕਲਿੱਕ ਕਰੋ</string>
   <string name="rank_up">ਵਾਹ! ਤੁਸੀਂ ਕੱਲ੍ਹ ਨਾਲੋਂ %1$d ਪੁਜ਼ੀਸ਼ਨਾਂ ਅੱਗੇ ਹੋ</string>
   <string name="rank_down">ਤੁਸੀਂ %1$d ਪੁਜ਼ੀਸ਼ਨਾਂ ਹੇਠਾਂ ਆ ਗਏ ! ਆਪਣੀ ਸਥਿਤੀ ਨੂੰ ਬਿਹਤਰ ਬਣਾਉਣ ਲਈ ਬਣਾਓ ਅਤੇ ਸ਼ੇਅਰ ਕਰੋ!</string>
   <string name="rank_same">ਆਪਣੀ ਸਥਿਤੀ ਨੂੰ ਬਿਹਤਰ ਬਣਾਉਣ ਲਈ ਬਣਾਓ ਅਤੇ ਸ਼ੇਅਰ ਕਰੋ!</string>
+  <string name="blogger_gold_about_text1">ਮੌਮਸਪ੍ਰੈਸੋ ਦੇ 10 ਸਾਲ ਪੂਰੇ ਹੋ ਰਹੇ ਹਨ! ਇਹ ਇਕ ਸ਼ਾਨਦਾਰ ਯਾਤਰਾ ਰਹੀ ਹੈ ਅਤੇ ਇਸ ਵਿਸ਼ੇਸ਼ ਦਿਨ ਨੂੰ ਯਾਦਗਾਰੀ ਬਣਾਉਣ ਲਈ ਅਸੀਂ ਕੁਝ ਵੱਡਾ ਕਰਨਾ ਚਾਹੁੰਦੇ ਸੀ। ਤੁਸੀਂ ਵੀ ਉਤਸ਼ਾਹਿਤ ਹੋ ਗਏ ਨਾ? ਤੁਹਾਨੂੰ ਹੋਣਾ ਵੀ ਚਾਹੀਦਾ ਹੈ! ਸਾਡੇ ਜਨਮਦਿਨ ਦੇ ਮਹੀਨੇ ਲਈ, 5 ਲੱਖ ਰੁਪਏ ਤੱਕ ਦੇ ਇਨਾਮ ਦਿੱਤੇ ਜਾਣਗੇ, ਅਤੇ ਤੁਸੀਂ ਸਾਰੇ ਇਸ ਇਨਾਮ ਨੂੰ ਜਿੱਤਣ ਦੇ ਹੱਕਦਾਰ ਹੋ! ਬੱਸ ਤੁਸੀਂ ਕਰਨਾ ਹੈ:</string>
+  <string name="blogger_gold_about_text2">What do you have to do?</string>
+  <string name="blogger_gold_about_text3">ਮੌਮਸਪ੍ਰੈਸੋ \'ਤੇ ਇਕ ਬਲੌਗ ਜਾਂ ਵੀ-ਲੌਗ ਬਣਾਓ, ਜੇ ਤੁਸੀਂ ਹਾਲੇ ਤੱਕ ਨਹੀਂ ਬਣਾਇਆ ਹੈ। </string>
+  <string name="blogger_gold_about_text4">ਆਰਗੈਨਿਕ ਪੇਜ ਵਿਊਜ਼ ਪ੍ਰਾਪਤ ਕਰਨ ਲਈ ਆਪਣੇ ਬਲੌਗਸ ਅਤੇ ਵੀ-ਲੌਗਜ਼ ਨੂੰ ਆਪਣੇ ਦੋਸਤਾਂ, ਪਰਿਵਾਰ ਅਤੇ ਸੋਸ਼ਲ ਗ੍ਰੁਪਸ ਦੇ ਨੈਟਵਰਕ ਨਾਲ ਸ਼ੇਅਰ ਕਰੋ। ਤੁਸੀਂ ਆਪਣੇ ਆਰਗੈਨਿਕ ਪੇਜ ਵਿਊਜ਼ ਨੂੰ ਵਧਾਉਣ ਲਈ ਆਪਣੇ ਪੁਰਾਣੇ ਪ੍ਰਕਾਸ਼ਤ ਬਲੌਗਸ ਅਤੇ ਵੀ-ਲੌਗਸ ਨੂੰ ਵੀ ਸ਼ੇਅਰ ਕਰ ਸਕਦੇ ਹੋ। </string>
+  <string name="blogger_gold_about_text5">ਮੌਮਸਪ੍ਰੈਸੋ ਤੇ ਕੁੱਲ ਆਰਗੈਨਿਕ ਪੇਜ ਵਿਊਜ਼ ਵਿੱਚ ਤੁਹਾਡੇ ਯੋਗਦਾਨ ਦੇ ਅਧਾਰ ਤੇ ਕਮਾਈ ਕਰੋ।</string>
+  <string name="blogger_gold_about_text6">It’s that simple. The higher the number of organic views of your blogs/vlogs, the higher YOUR share of the 5 Lakhs you will receive! </string>
+  <string name="blogger_gold_about_text7">ਵਧੇਰੇ ਜਾਣਕਾਰੀ ਲਈ ਇੱਥੇ ਕਲਿੱਕ ਕਰੋ</string>
+  <string name="blogger_gold_about_text8">ਹੈ ਨਾ ਬੇਮਿਸਾਲ ਮੌਕਾ ? ਤਾਂ ਫਿਰ, ਤੁਸੀਂ ਕਿਸ ਲਈ ਉਡੀਕ ਕਰ ਰਹੇ ਹੋ?  ਸ਼ੁਰੂ ਕਰੋ, ਬਣਾਓ, ਸ਼ੇਅਰ ਕਰੋ ਅਤੇ ਹੁਣੇ ਕਮਾਓ!</string>
   <string name="lang_sel_express_yourself">ਆਪਣੇ ਆਪ ਨੂੰ 10 ਭਾਸ਼ਾਵਾਂ ਵਿਚ ਪ੍ਰਗਟ ਕਰੋ</string>
   <string name="select_language">ਭਾਸ਼ਾ ਚੁਣੋ</string>
   <string name="login_or_sign_up">ਲੋਗਇਨ ਕਰੋ ਜਾਂ ਸਾਈਨ ਅਪ ਕਰੋ</string>
